--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "license": "MIT",
   "dependencies": {
     "xcraft-core-etc": "^1.0.0",
+    "xcraft-core-fs": "^1.0.0",
     "xcraft-core-placeholder": "^1.0.0",
     "xcraft-core-platform": "^1.0.0"
   },
