--- a/package.json
+++ b/package.json
@@ -9,11 +9,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "keywords": [
-    "xcraft",
-    "helpers",
-    "env"
-  ],
+  "keywords": ["xcraft", "helpers", "env"],
   "repository": {
     "type": "git",
     "url": "git+https://github.com/Xcraft-Inc/xcraft-core-env.git"
@@ -31,6 +27,6 @@
   },
   "homepage": "https://github.com/Xcraft-Inc/xcraft-core-env#readme",
   "devDependencies": {
-    "xcraft-dev-rules": "^0.2.0"
+    "xcraft-dev-rules": "^0.3.0"
   }
 }
