--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "author": "Mathieu Schroeter",
   "license": "MIT",
   "dependencies": {
+    "which": "^1.3.1",
     "xcraft-core-etc": "^1.0.0",
     "xcraft-core-fs": "^1.0.0",
     "xcraft-core-placeholder": "^1.0.0",
