--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "xcraft-core-env",
-  "version": "2.0.0",
+  "version": "2.1.0",
   "description": "Xcraft environment helpers",
   "main": "index.js",
   "engines": {
@@ -9,7 +9,11 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "keywords": ["xcraft", "helpers", "env"],
+  "keywords": [
+    "xcraft",
+    "helpers",
+    "env"
+  ],
   "repository": {
     "type": "git",
     "url": "git+https://github.com/Xcraft-Inc/xcraft-core-env.git"
