--- a/package.json
+++ b/package.json
@@ -18,7 +18,12 @@
     "type": "git",
     "url": "git+https://github.com/Xcraft-Inc/xcraft-core-env.git"
   },
-  "author": "Mathieu Schroeter",
+  "author": "Epsitec SA",
+  "contributors": [
+    "Mathieu Schroeter <schroeter@epsitec.ch>",
+    "Samuel Loup <loup@epsitec.ch>",
+    "Gillian Fries <fries@epsitec.ch>"
+  ],
   "license": "MIT",
   "dependencies": {
     "which": "^5.0.0",
